# font-subset-tool

./: .gitignore  README.md  font-subset-minimal.toml  font-subset.example.toml  pyproject.toml  subset_fonts.py
